--- a/index.html
+++ b/index.html
@@ -10,10 +10,66 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
-            <h1 class="text-center">start</h1>
-            <img src="img/bullseye.jpg" alt="img alt" class="img-responsive">
-        </div>
+        <header id="header">
+            <div class="container">
+              header
+            </div>
+        </header>
+        <section class="section-info">
+          <div class="container">
+              section-info
+            </div>
+        </section>
+        <section class="section-social-media">
+          <div class="container">
+            section-social-media
+          </div>
+        </section>
+        <section class="section-tabs">
+          <div class="container">
+            section-tabs
+          </div>
+        </section>
+        <section class="section-article">
+          <div class="container">
+            section-article 1
+          </div>
+        </section>
+        <section class="section-article section-article_reverce">
+          <div class="container">
+            section-article 2
+          </div>
+        </section>
+        <section class="section-why-this">
+          <div class="container">
+            section-why-this
+          </div>
+        </section>
+        <section class="section-price">
+          <div class="container">
+            section-price
+          </div>
+        </section>
+        <section class="section-blog">
+          <div class="container">
+            section-blog
+          </div>
+        </section>
+        <section class="section-download">
+          <div class="container">
+            section-download
+          </div>
+        </section>
+        <section class="section-contact-us">
+          <div class="container">
+            section-contact-us
+          </div>
+        </section>
+        <footer id="footer">
+          <div class="container">
+            footer
+          </div>
+        </footer>
     </div>
     <!-- vendor js -->
     <script src="vendor/jquery/jquery.min.js"></script>
